--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -1,1 +1,43 @@
 @import "../../../node_modules/bootstrap/scss/bootstrap";
+@import "./global";
+
+html body {
+    margin: 0;
+    padding: 0;
+    //min-height: 100vh;
+    //background-image: url("../images/metal-texture.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: "Tahoma";
+    color: $devColour;
+  
+    a {
+      text-decoration: none;
+      color: $textColour;
+    }
+
+    .container {
+        border: 1px solid red;
+    }
+
+    div {
+        border: .5px solid blue;
+    }
+  }
+
+  //Scrollbar settings
+  ::-webkit-scrollbar {
+    width: 5px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px #2f2f30; 
+    border-radius: 10px;
+  }
+   
+  ::-webkit-scrollbar-thumb {
+    background: #e0ffff; 
+    border-radius: 10px;
+  }
+
+  //Global
