Added basic models and data service

--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -4,6 +4,8 @@
     </div>
     <div class="row">
         <app-rotor></app-rotor>
+        <app-rotor></app-rotor>
+        <app-rotor></app-rotor>
     </div>
     <div class="row">
         <app-output-lamps></app-output-lamps>
