--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -3,6 +3,12 @@
         <app-logo></app-logo>
     </div>
     <div class="row">
+        <button class="btn btn-primary" (click)="shift(-1)">
+            +
+        </button>
+        <button class="btn btn-primary" (click)="shift(1)">
+            -
+        </button>
         <app-rotor></app-rotor>
         <app-rotor></app-rotor>
         <app-rotor></app-rotor>
