--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -2,10 +2,18 @@
     <div class="row">
         <app-logo></app-logo>
     </div>
-    <div class="d-flex flex-direction-column justify-content-center">
-        <app-rotor [rotor]="rotorOne"></app-rotor>
-        <app-rotor [rotor]="rotorTwo"></app-rotor>
-        <app-rotor [rotor]="rotorThree"></app-rotor>
+    <div class="row">
+        <div class="d-flex">
+            Dupa
+            Cipa
+            Cycki
+            Chuj
+        </div>
+        <div class="d-flex flex-direction-column align-items-center justify-content-center">
+            <app-rotor [rotor]="rotorOne"></app-rotor>
+            <app-rotor [rotor]="rotorTwo"></app-rotor>
+            <app-rotor [rotor]="rotorThree"></app-rotor>
+        </div>
     </div>
     <div class="row">
         <app-output-lamps></app-output-lamps>
