--- a/src/app/enigma/rotor/rotor.component.html
+++ b/src/app/enigma/rotor/rotor.component.html
@@ -1,4 +1,4 @@
-<div class="rotor-section d-flex">
+<div class="rotor-section d-flex pb-3" *ngIf="!ringSettingsVisible">
     <div class="window">
         <span class="current-rotor-value">
             {{this.rotor.entryLetters[0]}}
@@ -8,5 +8,19 @@
         <div class="character next-character" (click)="step(1)">{{this.rotor.entryLetters[1]}}</div>
         <div class="character focus-character">{{this.rotor.entryLetters[0]}}</div>
         <div class="character previous-character" (click)="step(-1)">{{this.rotor.entryLetters[25]}}</div>
+    </div>
+</div>
+<div class="rotor-section d-flex pb-3" *ngIf="ringSettingsVisible">
+    <div class="window">
+        <span class="current-rotor-value">
+            {{this.rotor.ringSettingNumbersArray[0]}}
+        </span>
+    </div>
+    <div class="rotor">
+        <div class="character next-character" (click)="stepRingSetting(-1)">
+            {{this.rotor.ringSettingNumbersArray[25]}}</div>
+        <div class="character focus-character">{{this.rotor.ringSettingNumbersArray[0]}}</div>
+        <div class="character previous-character" (click)="stepRingSetting(1)">
+            {{this.rotor.ringSettingNumbersArray[1]}}</div>
     </div>
 </div>
