--- a/src/app/enigma/rotor/rotor.component.scss
+++ b/src/app/enigma/rotor/rotor.component.scss
@@ -18,13 +18,13 @@
         height: 40px;
         font-size: 1.2rem;
         text-shadow: 0px 1px #AAAAAA;
-        box-shadow: rgba(201, 203, 188, 1) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+        background: linear-gradient(135deg, rgba(221,218,199,1) 15%, rgba(255,255,255,1) 30%, rgba(207,201,163,1) 75%);;
     }
 }
 
 .rotor {
     margin: 0 20px;
-    width: 20px;
+    width: 25px;
     height: 150px;
     border: 3px solid black;
     box-shadow: 2px 2px 2px #3b3d3c;
