Added moveable keyboard

--- a/src/app/enigma/input-keyboard/input-keyboard.component.html
+++ b/src/app/enigma/input-keyboard/input-keyboard.component.html
@@ -1,87 +1,87 @@
 <div class="container">
     <div class="lampboard">
         <div class="d-flex justify-content-center align-items-center pt-1">
-            <div class="key">
-                Q
+            <div class="key-section">
+                <span class="key">Q</span>
             </div>
-            <div class="key">
-                W
+            <div class="key-section">
+                <span class="key">W</span>
             </div>
-            <div class="key">
-                E
+            <div class="key-section">
+                <span class="key">E</span>
             </div>
-            <div class="key">
-                R
+            <div class="key-section">
+                <span class="key">R</span>
             </div>
-            <div class="key">
-                T
+            <div class="key-section">
+                <span class="key">T</span>
             </div>
-            <div class="key">
-                Z
+            <div class="key-section">
+                <span class="key">Z</span>
             </div>
-            <div class="key">
-                Z
+            <div class="key-section">
+                <span class="key">U</span>
             </div>
-            <div class="key">
-                U
+            <div class="key-section">
+                <span class="key">I</span>
             </div>
-            <div class="key">
-                I
-            </div>
-        </div>
-        <div class="d-flex justify-content-center align-items-center pt-1">
-            <div class="key">
-                A
-            </div>
-            <div class="key">
-                S
-            </div>
-            <div class="key">
-                D
-            </div>
-            <div class="key">
-                F
-            </div>
-            <div class="key">
-                G
-            </div>
-            <div class="key">
-                H
-            </div>
-            <div class="key">
-                J
-            </div>
-            <div class="key">
-                K
+            <div class="key-section">
+                <span class="key">O</span>
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center pt-1">
-            <div class="key">
-                P
+            <div class="key-section">
+                <span class="key">A</span>
             </div>
-            <div class="key">
-                Y
+            <div class="key-section">
+                <span class="key">S</span>
             </div>
-            <div class="key">
-                X
+            <div class="key-section">
+                <span class="key">D</span>
             </div>
-            <div class="key">
-                C
+            <div class="key-section">
+                <span class="key">F</span>
             </div>
-            <div class="key">
-                V
+            <div class="key-section">
+                <span class="key">G</span>
             </div>
-            <div class="key">
-                B
+            <div class="key-section">
+                <span class="key">H</span>
             </div>
-            <div class="key">
-                N
+            <div class="key-section">
+                <span class="key">J</span>
             </div>
-            <div class="key">
-                M
+            <div class="key-section">
+                <span class="key">K</span>
             </div>
-            <div class="key">
-                L
+        </div>
+        <div class="d-flex justify-content-center align-items-center pt-1">
+            <div class="key-section">
+                <span class="key">P</span>
+            </div>
+            <div class="key-section">
+                <span class="key">Y</span>
+            </div>
+            <div class="key-section">
+                <span class="key">X</span>
+            </div>
+            <div class="key-section">
+                <span class="key">C</span>
+            </div>
+            <div class="key-section">
+                <span class="key">V</span>
+            </div>
+            <div class="key-section">
+                <span class="key">B</span>
+            </div>
+            <div class="key-section">
+                <span class="key">N</span>
+            </div>
+            <div class="key-section">
+                <span class="key">M</span>
+            </div>
+            <div class="key-section">
+                <span class="key">L</span>
             </div>
         </div>
     </div>
