--- a/src/app/enigma/input-keyboard/input-keyboard.component.scss
+++ b/src/app/enigma/input-keyboard/input-keyboard.component.scss
@@ -1,14 +1,28 @@
+.key-section {
+    width: 40px;
+    height: 40px;
+    margin: 5px 15px;
+}
+
 .key {
     font-size: 1.5rem;
     color: #D0D0D0;
-    border: 3px solid black;
+    border: 3px solid #C0C0C0;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    margin: 5px 15px;
     display: flex;
     align-items: center;
     justify-content: center;
     text-shadow: 0px 1px #AAAAAA;
     background: linear-gradient(135deg, rgba(61,61,61,1) 6%, rgba(135,135,135,1) 34%, rgba(5,5,5,1) 50%);
+    cursor: pointer;
+    user-select: none;
+    transition: .1s all ease-in-out;
 }
+
+.key:active, .keyOn {
+    width: 38px;
+    height: 38px;
+}
+
