--- a/src/app/enigma/output-lamps/output-lamps.component.scss
+++ b/src/app/enigma/output-lamps/output-lamps.component.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     text-shadow: 0px 1px #AAAAAA;
     background: linear-gradient(135deg, rgba(255,255,255,1) 10%, rgba(0,0,0,1) 45%);
+    user-select: none;
 }
 
 .light-on {
