--- a/src/app/enigma/plugboard/plugboard.component.html
+++ b/src/app/enigma/plugboard/plugboard.component.html
@@ -1,1 +1,20 @@
-Plugboard Section
+<div class="container">
+    <div class="plugboard">
+        <div class="d-flex justify-content-center align-items-center pt-1">
+            <div class="plug d-flex align-items-center justify-content-center">
+                <div class="letter">A</div>
+                <div class="holes">
+                    <div class="top">top</div>
+                    <div class="bottom">bottom</div>
+                </div>
+                <div class="number">1</div>
+            </div>
+        </div>
+        <div class="d-flex justify-content-center align-items-center pt-1">
+            Row 2
+        </div>
+        <div class="d-flex justify-content-center align-items-center pt-1">
+            Row 3
+        </div>
+    </div>
+</div>
