--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -10,9 +10,9 @@
             Chuj
         </div>
         <div class="d-flex flex-direction-column align-items-center justify-content-center">
-            <app-rotor [rotor]="rotorOne"></app-rotor>
-            <app-rotor [rotor]="rotorTwo"></app-rotor>
             <app-rotor [rotor]="rotorThree"></app-rotor>
+            <app-rotor [rotor]="rotorTwo"></app-rotor>
+            <app-rotor [rotor]="rotorOne"></app-rotor>
         </div>
     </div>
     <div class="row">
@@ -28,6 +28,6 @@
 <hr>
 <div class="container">
     <div class="row">
-        Summary
+        <button class="btn btn-primary" (click)="getCurrentSetting()">Click me</button>
     </div>
 </div>
