--- a/src/app/enigma/input-keyboard/input-keyboard.component.html
+++ b/src/app/enigma/input-keyboard/input-keyboard.component.html
@@ -1,87 +1,18 @@
 <div class="container">
     <div class="lampboard">
         <div class="d-flex justify-content-center align-items-center pt-1">
-            <div class="key-section">
-                <span class="key">Q</span>
-            </div>
-            <div class="key-section">
-                <span class="key">W</span>
-            </div>
-            <div class="key-section">
-                <span class="key">E</span>
-            </div>
-            <div class="key-section">
-                <span class="key">R</span>
-            </div>
-            <div class="key-section">
-                <span class="key">T</span>
-            </div>
-            <div class="key-section">
-                <span class="key">Z</span>
-            </div>
-            <div class="key-section">
-                <span class="key">U</span>
-            </div>
-            <div class="key-section">
-                <span class="key">I</span>
-            </div>
-            <div class="key-section">
-                <span class="key">O</span>
+            <div class="key-section" *ngFor="let char of firstRow">
+                <span class="key" [class.keyOn]="pressedKey === char" (click)="keyClicked(char)">{{char}}</span>
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center pt-1">
-            <div class="key-section">
-                <span class="key">A</span>
-            </div>
-            <div class="key-section">
-                <span class="key">S</span>
-            </div>
-            <div class="key-section">
-                <span class="key">D</span>
-            </div>
-            <div class="key-section">
-                <span class="key">F</span>
-            </div>
-            <div class="key-section">
-                <span class="key">G</span>
-            </div>
-            <div class="key-section">
-                <span class="key">H</span>
-            </div>
-            <div class="key-section">
-                <span class="key">J</span>
-            </div>
-            <div class="key-section">
-                <span class="key">K</span>
+            <div class="key-section" *ngFor="let char of secondRow">
+                <span class="key" [class.keyOn]="pressedKey === char" (click)="keyClicked(char)">{{char}}</span>
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center pt-1">
-            <div class="key-section">
-                <span class="key">P</span>
-            </div>
-            <div class="key-section">
-                <span class="key">Y</span>
-            </div>
-            <div class="key-section">
-                <span class="key">X</span>
-            </div>
-            <div class="key-section">
-                <span class="key">C</span>
-            </div>
-            <div class="key-section">
-                <span class="key">V</span>
-            </div>
-            <div class="key-section">
-                <span class="key">B</span>
-            </div>
-            <div class="key-section">
-                <span class="key">N</span>
-            </div>
-            <div class="key-section">
-                <span class="key">M</span>
-            </div>
-            <div class="key-section">
-                <span class="key">L</span>
+            <div class="key-section" *ngFor="let char of thirdRow">
+                <span class="key" [class.keyOn]="pressedKey === char" (click)="keyClicked(char)">{{char}}</span>
             </div>
         </div>
     </div>
