--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -4,10 +4,7 @@
     </div>
     <div class="row">
         <div class="d-flex">
-            Dupa
-            Cipa
-            Cycki
-            Chuj
+            Enigma Options
         </div>
         <div class="d-flex flex-direction-column align-items-center justify-content-center">
             <app-rotor [rotor]="rotorThree"></app-rotor>
