--- a/src/app/enigma/plugboard/plugboard.component.scss
+++ b/src/app/enigma/plugboard/plugboard.component.scss
@@ -22,6 +22,10 @@
         border-radius: 50%;
     }
 
+    .cable-hole-plugged {
+        background-color: red;
+    }
+
     .top {
         border: 4px solid #C0C0C0;
         margin-bottom: 10px;
@@ -30,4 +34,8 @@
     .bottom {
         border: 5px solid #C0C0C0;     
     }
+}
+
+.holes:hover {
+    cursor: pointer;
 }
