--- a/src/app/enigma/plugboard/plugboard.component.scss
+++ b/src/app/enigma/plugboard/plugboard.component.scss
@@ -8,6 +8,7 @@
         width: 22px;
         height: 22px;
         border-radius: 50%;
+        transition: background-color .3s ease-in-out;
     }
 
     .top {
