Added input model to Plugboard component to allow interaction.

--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -19,7 +19,7 @@
         <app-input-keyboard></app-input-keyboard>
     </div>
     <div class="row">
-        <app-plugboard></app-plugboard>
+        <app-plugboard [plugboard]="plugboard"></app-plugboard>
     </div>
 </div>
 <hr>
