--- a/src/app/enigma/output-lamps/output-lamps.component.scss
+++ b/src/app/enigma/output-lamps/output-lamps.component.scss
@@ -1,3 +1,7 @@
+// .container {
+//     background: url(../../../assets/images/texture.jpg);
+// }
+
 .lamp-section {
     width: 40px;
     height: 40px;
@@ -6,6 +10,7 @@
 
 .light {
     font-size: 1.5rem;
+    font-weight: bold;
     color: #D0D0D0;
     border: 3px solid black;
     border-radius: 50%;
@@ -13,7 +18,8 @@
     align-items: center;
     justify-content: center;
     text-shadow: 0px 1px #AAAAAA;
-    background: linear-gradient(135deg, rgba(255,255,255,1) 10%, rgba(0,0,0,1) 45%);
+    background-color: black;
+    //background: linear-gradient(135deg, rgba(255,255,255,1) 10%, rgba(0,0,0,1) 45%);
     user-select: none;
 }
 
