--- a/src/app/enigma/input-keyboard/input-keyboard.component.scss
+++ b/src/app/enigma/input-keyboard/input-keyboard.component.scss
@@ -1,3 +1,7 @@
+// .container {
+//     background: url(../../../assets/images/texture.jpg);
+// }
+
 .key-section {
     width: 40px;
     height: 40px;
@@ -15,7 +19,8 @@
     align-items: center;
     justify-content: center;
     text-shadow: 0px 1px #AAAAAA;
-    background: linear-gradient(135deg, rgba(61,61,61,1) 6%, rgba(135,135,135,1) 34%, rgba(5,5,5,1) 50%);
+    background-color: black;
+    //background: linear-gradient(135deg, rgba(61,61,61,1) 6%, rgba(135,135,135,1) 34%, rgba(5,5,5,1) 50%);
     cursor: pointer;
     user-select: none;
     transition: .1s all ease-in-out;
