--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -3,14 +3,7 @@
         <app-logo></app-logo>
     </div>
     <div class="row">
-        <div class="d-flex">
-            Enigma Options
-        </div>
-        <div class="d-flex flex-direction-column align-items-center justify-content-center">
-            <app-rotor [rotor]="rotorThree"></app-rotor>
-            <app-rotor [rotor]="rotorTwo"></app-rotor>
-            <app-rotor [rotor]="rotorOne"></app-rotor>
-        </div>
+        <app-rotor-section [rotorSection]="rotorSection"></app-rotor-section>
     </div>
     <div class="row">
         <app-output-lamps></app-output-lamps>
