--- a/src/app/enigma/rotor/rotor.component.html
+++ b/src/app/enigma/rotor/rotor.component.html
@@ -1,26 +1,22 @@
 <div class="rotor-section d-flex" *ngIf="!ringSettingsVisible">
-    <div class="window">
-        <span class="current-rotor-value">
-            {{this.rotor.entryLetters[0]}}
-        </span>
-    </div>
-    <div class="rotor">
-        <div class="character next-character" (click)="step(1)">{{this.rotor.entryLetters[1]}}</div>
-        <div class="character focus-character">{{this.rotor.entryLetters[0]}}</div>
-        <div class="character previous-character" (click)="step(-1)">{{this.rotor.entryLetters[25]}}</div>
-    </div>
+  <div class="window">
+    <span class="current-rotor-value"> {{this.rotor.entryLetters[0]}} </span>
+  </div>
+  <div class="rotor">
+    <div class="character next-character" (click)="step(1)">{{this.rotor.entryLetters[1]}}</div>
+    <div class="character focus-character">{{this.rotor.entryLetters[0]}}</div>
+    <div class="character previous-character" (click)="step(-1)">{{this.rotor.entryLetters[25]}}</div>
+  </div>
 </div>
 <div class="rotor-section d-flex" *ngIf="ringSettingsVisible">
-    <div class="window">
-        <span class="current-rotor-value">
-            {{this.rotor.ringSettingNumbersArray[0]}}
-        </span>
+  <div class="window">
+    <span class="current-rotor-value"> {{this.rotor.ringSettingNumbersArray[0]}} </span>
+  </div>
+  <div class="rotor">
+    <div class="character next-character" (click)="stepRingSetting(-1)">{{this.rotor.ringSettingNumbersArray[25]}}</div>
+    <div class="character focus-character">{{this.rotor.ringSettingNumbersArray[0]}}</div>
+    <div class="character previous-character" (click)="stepRingSetting(1)">
+      {{this.rotor.ringSettingNumbersArray[1]}}
     </div>
-    <div class="rotor">
-        <div class="character next-character" (click)="stepRingSetting(-1)">
-            {{this.rotor.ringSettingNumbersArray[25]}}</div>
-        <div class="character focus-character">{{this.rotor.ringSettingNumbersArray[0]}}</div>
-        <div class="character previous-character" (click)="stepRingSetting(1)">
-            {{this.rotor.ringSettingNumbersArray[1]}}</div>
-    </div>
+  </div>
 </div>
