--- a/src/app/enigma/logo/logo.component.html
+++ b/src/app/enigma/logo/logo.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-    <img class="logo" src="../../../assets/images/logo.png" alt="Enigma by Pawel Maslak">
+  <img class="logo" src="../../../assets/images/logo.png" alt="Enigma by Pawel Maslak" />
 </div>
