--- a/src/app/enigma/rotor/rotor.component.html
+++ b/src/app/enigma/rotor/rotor.component.html
@@ -1,4 +1,4 @@
-<div class="rotor-section d-flex" *ngIf="!ringSettingsVisible">
+<div class="rotor-section d-flex" *ngIf="!rotor.ringSettingVisible">
   <div class="window">
     <span class="current-rotor-value"> {{this.rotor.entryLetters[0]}} </span>
   </div>
@@ -8,7 +8,7 @@
     <div class="character previous-character" (click)="step(-1)">{{this.rotor.entryLetters[25]}}</div>
   </div>
 </div>
-<div class="rotor-section d-flex" *ngIf="ringSettingsVisible">
+<div class="rotor-section d-flex" *ngIf="rotor.ringSettingVisible">
   <div class="window">
     <span class="current-rotor-value"> {{this.rotor.ringSettingNumbersArray[0]}} </span>
   </div>
