--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-top-menu></app-top-menu>
-<app-enigma></app-enigma>
+<!-- <app-enigma></app-enigma> -->
+<app-compact-enigma></app-compact-enigma>
 <app-footer></app-footer>
