Adding controls to compact enigma

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-top-menu></app-top-menu>
-<!-- <app-enigma></app-enigma> -->
-<app-compact-enigma></app-compact-enigma>
+<app-enigma></app-enigma>
 <app-footer></app-footer>
