--- a/src/app/compact-enigma/compact-enigma.component.html
+++ b/src/app/compact-enigma/compact-enigma.component.html
@@ -1,9 +1,15 @@
 <div class="container">
   <div class="row">Summary</div>
   <div class="row">
-    <div class="col">Input</div>
-    <div class="col">Rotors</div>
-    <div class="col">Output</div>
+    <div class="col">
+      <app-compact-input-area></app-compact-input-area>
+    </div>
+    <div class="col">
+      <app-compact-rotor-section></app-compact-rotor-section>
+    </div>
+    <div class="col">
+      <app-compact-output-area></app-compact-output-area>
+    </div>
   </div>
   <div class="row">Plugboard</div>
 </div>
