--- a/src/app/enigma/enigma.component.scss
+++ b/src/app/enigma/enigma.component.scss
@@ -1,11 +1,3 @@
 .container {
-    width: 1100px;
-
-    .enigma {
-        width: 800px;
-    }    
-    .control {
-        width: 300px;
-    }
+    justify-content: center;
 }
-
