--- a/src/app/enigma/input-keyboard/input-keyboard.component.html
+++ b/src/app/enigma/input-keyboard/input-keyboard.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container pt-3 pb-3">
   <div class="lampboard">
     <div class="d-flex justify-content-center align-items-center pt-1">
       <div class="key-section" *ngFor="let char of firstRow">
