--- a/src/app/enigma/output-lamps/output-lamps.component.scss
+++ b/src/app/enigma/output-lamps/output-lamps.component.scss
@@ -1,6 +1,6 @@
-// .container {
-//     background: url(../../../assets/images/texture.jpg);
-// }
+.container {
+    background: url(../../../assets/images/texture.jpg);
+}
 
 .lamp-section {
     width: 40px;
