--- a/src/app/compact-enigma/compact-enigma.component.html
+++ b/src/app/compact-enigma/compact-enigma.component.html
@@ -5,7 +5,7 @@
       <app-compact-input-area></app-compact-input-area>
     </div>
     <div class="col">
-      <app-compact-rotor-section></app-compact-rotor-section>
+      <app-rotor-section [rotorSection]="rotorSection"></app-rotor-section>
     </div>
     <div class="col">
       <app-compact-output-area></app-compact-output-area>
