--- a/src/app/compact-enigma/compact-input-area/compact-input-area.component.scss
+++ b/src/app/compact-enigma/compact-input-area/compact-input-area.component.scss
@@ -1,3 +1,11 @@
 textarea {
     resize: none;
+    border: 1px solid black;
+    border-radius: 1px;
+    transition: all .5s ease-in-out;
+}
+
+textarea:focus {
+    box-shadow: none;
+    border: 2px solid black;
 }
