--- a/src/app/enigma/enigma.component.html
+++ b/src/app/enigma/enigma.component.html
@@ -1,4 +1,13 @@
-<div class="container d-flex">
+<div class="container">
+  <div class="row">
+    <button type="button" (click)="toggleEnigmaButton()" class="btn btn-primary toggle-button">
+      {{getEnigmaToggleButtonText()}}
+    </button>
+    <button type="button" class="btn btn-primary toggle-button">Show summary</button>
+    <button type="button" class="btn btn-warning reset-button">Reset</button>
+  </div>
+</div>
+<div class="container d-flex enigma" *ngIf="!compactEnigmaVisible">
   <div class="enigma">
     <div class="row">
       <app-logo></app-logo>
@@ -15,13 +24,20 @@
     <div class="row">
       <app-plugboard [plugboard]="plugboard"></app-plugboard>
     </div>
+    <div class="row">
+      <app-output></app-output>
+    </div>
   </div>
   <!-- <div class="col-2 control">
     <app-control-panel [plugboard]="plugboard" [rotorSection]="rotorSection"></app-control-panel>
   </div> -->
 </div>
 <hr />
-<app-compact-enigma></app-compact-enigma>
+<app-compact-enigma
+  *ngIf="compactEnigmaVisible"
+  [rotorSection]="rotorSection"
+  [plugboard]="plugboard"
+></app-compact-enigma>
 <div class="container">
   <div class="row">
     <button class="btn btn-primary" (click)="getCurrentSetting()">Click me</button>
