--- a/src/app/enigma/input-keyboard/input-keyboard.component.scss
+++ b/src/app/enigma/input-keyboard/input-keyboard.component.scss
@@ -1,6 +1,6 @@
-// .container {
-//     background: url(../../../assets/images/texture.jpg);
-// }
+.container {
+    background: url(../../../assets/images/texture.jpg);
+}
 
 .key-section {
     width: 40px;
