--- a/src/app/enigma/logo/logo.component.scss
+++ b/src/app/enigma/logo/logo.component.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     padding-bottom: 2rem;
     padding-top: 2rem;
+    background-image: url("../../../assets/images/texture.jpg");
 }
 
 .logo {
