--- a/src/app/enigma/plugboard/plugboard.component.scss
+++ b/src/app/enigma/plugboard/plugboard.component.scss
@@ -1,5 +1,9 @@
 @import '../../../assets/styles/global';
 
+.container {
+    background-image: url("../../../assets/images/texture.jpg");
+}
+
 .holes {
     display: flex;
     flex-direction: column;
@@ -31,6 +35,7 @@
     margin: 5px;
     text-shadow: 0px 1px #AAAAAA;
     color: #E1C16E;
+    user-select: none;
 }
 
 .letter-pair {
@@ -41,6 +46,7 @@
     border-radius: 5px;
     margin-left: 5px;
     margin-right: 5px;
+    background-color: black;
 }
 
 .plug {
