--- a/src/app/enigma/output/output.component.html
+++ b/src/app/enigma/output/output.component.html
@@ -1,3 +1,3 @@
 <div class="container pt-2 pb-2">
-  <span class="output">{{outputContent}}</span>
+  <span class="output">Output: {{outputContent}}</span>
 </div>
