--- a/src/app/enigma/plugboard/plugboard.component.scss
+++ b/src/app/enigma/plugboard/plugboard.component.scss
@@ -42,7 +42,7 @@
     text-align: center;
     width: 50px;
     height: 35px;
-    border: 2px solid #E1C16E;;
+    border: 2px solid #E1C16E;
     border-radius: 5px;
     margin-left: 5px;
     margin-right: 5px;
