Added input output messages styling

--- a/src/app/enigma/output/output.component.html
+++ b/src/app/enigma/output/output.component.html
@@ -1,3 +1,10 @@
-<div class="container pt-2 pb-2">
-  <span class="output">Output: {{outputContent}}</span>
+<div class="container d-flex flex-column pt-2 pb-2">
+  <div class="labels d-flex justify-content-around">
+    <span class="label">Input</span>
+    <span class="label">Encoded message</span>
+  </div>
+  <div class="textareas d-flex">
+    <span class="input">{{inputContent}}</span>
+    <span class="output">{{outputContent}}</span>
+  </div>
 </div>
