--- a/src/app/enigma/control-panel/control-panel.component.scss
+++ b/src/app/enigma/control-panel/control-panel.component.scss
@@ -19,6 +19,7 @@
             background: radial-gradient(circle, rgba(188, 194, 203, 1) 0%, rgba(255, 255, 255, 1) 100%);
             cursor: pointer;
             transition: all .1s ease-in-out;
+            user-select: none;
         }
     
         .button:active {
