--- a/src/app/enigma/output/output.component.scss
+++ b/src/app/enigma/output/output.component.scss
@@ -2,14 +2,35 @@
     display: flex;
     background-image: url("../../../assets/images/texture.jpg");
 
-    .output {
-        height: 100px;
-        border: 1px solid black;
+    .labels {
+        width: 100%;
+
+        .label {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 10px;
+            border: 2px solid #E1C16E;
+            border-radius: 10px;
+            width: 140px;
+            height: 30px;
+            font-size: 9pt;
+            text-transform: uppercase;
+            user-select: none;
+            color: black;
+            background: radial-gradient(circle, rgba(188, 194, 203, 1) 0%, rgba(255, 255, 255, 1) 100%);
+        }
+    }
+
+    .output, .input {
+        height: 150px;
+        border: 2px solid #E1C16E;
         width: 100%;
         border-radius: 5px;
         background-color: papayawhip;
         text-transform: uppercase;
-        font-size: 15pt;
+        font-size: 13pt;
+        margin: 10px;
     }
 }
 
