--- a/src/app/enigma/rotor/rotor.component.scss
+++ b/src/app/enigma/rotor/rotor.component.scss
@@ -18,6 +18,7 @@
         height: 40px;
         font-size: 1.2rem;
         text-shadow: 0px 1px #AAAAAA;
+        user-select: none;
         background: linear-gradient(135deg, rgba(221,218,199,1) 15%, rgba(255,255,255,1) 30%, rgba(207,201,163,1) 75%);;
     }
 }
@@ -41,6 +42,7 @@
             rgba(226, 226, 226, 1) 70%,
             rgba(42, 42, 42, 1) 98%,
             rgba(0, 0, 0, 1) 100%);
+            user-select: none;
 
     .character {
         display: flex;
